Version 2.00 ()
 * Use Errno instead of POSIX as this takes less mem and is faster to load.
 * Added support for auto detecting if a socket is in listening mode or not.
   Listen => 1 on add() is no longer needed.
 * Rename "error_num" to "errno" in error events
 * Add new "Errors" options to add() that returns ICMP errors as error events.
 * Close no longer waits for send buffer to empty
 * Drop support for timeouts pr. file handle

Version 1.02 (Sun Dec 30 2007)
 * Make push_event public, so fake events can be pushed to the queue.
 * Fixed bug in fixed size buffering
 * Fix all Perl::Critic warning
 * Add experimental HTTP buffer type
 * Fixed bug in socket type detection
 * Croak when sending to a $fh that is not ours

Version 1.01 (Tue Sep 4 2007)
 * Fixed test that was time dependent